# ZendeskBDK

./: .pre-commit-config.yaml  .releaserc  CHANGELOG.md  CONTRIB.md  Dockerfile  README.md  USAGE.md  poetry_scripts.py  pyproject.toml
.githooks/: commit-msg
.githooks/hook_scripts/: __init__.py  conventional_commits.py
.github/actions/gitlint/: action.yaml
.github/actions/run_checks_and_tests/: action.yaml
.github/actions/setup_credentials/: action.yaml
.github/actions/setup_python_environment/: action.yaml
.github/actions/terraform/: action.yaml
.github/actions/terraform_apply/: action.yaml
.github/actions/terraform_check/: action.yaml
.github/scripts/: bump_project_version.sh  resolve_runtime_version.sh  setup_variables.py  update_pyproject_version.sh
.github/workflows/: ci.yaml  main-pipeline.yaml  rw-run-checks-and-tests.yaml  rw-semantic-release.yaml  rw-setup-configuration-variables.yaml
.repo_setup/: repo_setup.sh
src/openweather/: __version__.py  book.py
src/zendesk/: __init__.py  __version__.py  book.py
src/zendesk/concepts/: __init__.py  zendesk_concepts.py
terraform/: lambda.tf  terraform.tfvars  variables.tf
tests/: conftest.py  test_advanced_procedures.py  test_basic_procedures.py  test_book.py  test_connect.py
tests/cassettes/test_book/: test_api_key_invalid.yaml  test_api_key_valid.yaml  test_current_temperature.yaml  test_current_temperature_with_units.yaml  test_get_current_temperature_error_response.yaml
